force-app/main/default/objects/Page_Content__c/Page_Content__c.object-meta.xml
<CustomObject>
    <label>Page Content</label>
    <pluralLabel>Page Content</pluralLabel>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Page Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Flexible content blocks for custom pages</description>
</CustomObject>