force-app/main/default/objects/Page_Content__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description
  >Whether this content block is active and should be displayed</description>
</CustomField>