force-app/main/default/objects/Page_Content__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <type>Html</type>
    <length>32768</length>
    <description>The HTML content for this section</description>
</CustomField>