force-app/main/default/objects/Page_Content__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Sort order for content blocks within a section</description>
</CustomField>