force-app/main/default/objects/Page_Content__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
                <default>true</default>
                <label>Body</label>
            </value>
            <value>
                <fullName>Sidebar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>The section of the page this content appears in</description>
</CustomField>